rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_key_column_usage_postgres.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT * FROM information_schema.key_column_usage\".to_string(),\n              DatabaseProtocol::PostgreSQL).await?"
---
+--------------------+-------------------+-----------------+---------------+--------------+------------+-------------+------------------+-------------------------------+
| constraint_catalog | constraint_schema | constraint_name | table_catalog | table_schema | table_name | column_name | ordinal_position | position_in_unique_constraint |
+--------------------+-------------------+-----------------+---------------+--------------+------------+-------------+------------------+-------------------------------+
+--------------------+-------------------+-----------------+---------------+--------------+------------+-------------+------------------+-------------------------------+
