rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_processlist.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 5710
expression: "execute_query(\"SELECT * FROM information_schema.processlist\".to_string(),\n            DatabaseProtocol::MySQL).await?"
---
+----+------+-----------+----+---------+------+------------------------+------+
| ID | USER | HOST      | DB | COMMAND | TIME | STATE                  | INFO |
+----+------+-----------+----+---------+------+------------------------+------+
| 1  | ovr  | 127.0.0.1 | db | daemon  | 0    | Waiting on empty queue | NULL |
+----+------+-----------+----+---------+------+------------------------+------+
