rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_role_column_grants_postgresql.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT * FROM information_schema.role_column_grants\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+---------+---------+---------------+--------------+---------------------------+--------------------+----------------+--------------+
| grantor | grantee | table_catalog | table_schema | table_name                | column_name        | privilege_type | is_grantable |
+---------+---------+---------------+--------------+---------------------------+--------------------+----------------+--------------+
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | count              | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | maxPrice           | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | minPrice           | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | avgPrice           | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | countDistinct      | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | payingPercentage   | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | order_date         | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | customer_gender    | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | taxful_total_price | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | has_subscription   | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | is_male            | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | is_female          | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | __user             | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | __cubeJoinField    | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | Logs                      | agentCount         | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | Logs                      | agentCountApprox   | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | Logs                      | read               | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | Logs                      | __user             | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | Logs                      | __cubeJoinField    | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | NumberCube                | someNumber         | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | NumberCube                | __user             | SELECT         | YES          |
| ovr     | ovr     | cubedb        | public       | NumberCube                | __cubeJoinField    | SELECT         | YES          |
+---------+---------+---------------+--------------+---------------------------+--------------------+----------------+--------------+
