rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_role_table_grants_postgresql.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 6534
expression: "execute_query(\"SELECT * FROM information_schema.role_table_grants\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+---------+---------+---------------+--------------+---------------------------+----------------+--------------+----------------+
| grantor | grantee | table_catalog | table_schema | table_name                | privilege_type | is_grantable | with_hierarchy |
+---------+---------+---------------+--------------+---------------------------+----------------+--------------+----------------+
| ovr     | ovr     | cubedb        | public       | KibanaSampleDataEcommerce | SELECT         | YES          | YES            |
| ovr     | ovr     | cubedb        | public       | Logs                      | SELECT         | YES          | YES            |
| ovr     | ovr     | cubedb        | public       | NumberCube                | SELECT         | YES          | YES            |
| ovr     | ovr     | cubedb        | public       | WideCube                  | SELECT         | YES          | YES            |
| ovr     | ovr     | cubedb        | public       | MultiTypeCube             | SELECT         | YES          | YES            |
+---------+---------+---------------+--------------+---------------------------+----------------+--------------+----------------+
