rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_table_constraints_postgres.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT * FROM information_schema.table_constraints\".to_string(),\n              DatabaseProtocol::PostgreSQL).await?"
---
+--------------------+-------------------+-----------------+---------------+--------------+------------+-----------------+---------------+--------------------+----------+
| constraint_catalog | constraint_schema | constraint_name | table_catalog | table_schema | table_name | constraint_type | is_deferrable | initially_deferred | enforced |
+--------------------+-------------------+-----------------+---------------+--------------+------------+-----------------+---------------+--------------------+----------+
+--------------------+-------------------+-----------------+---------------+--------------+------------+-----------------+---------------+--------------------+----------+
