rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_tables_postgres.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 8876
expression: "execute_query(\"SELECT * FROM information_schema.tables\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+---------------+--------------------+---------------------------+------------+------------------------------+----------------------+---------------------------+--------------------------+------------------------+--------------------+----------+---------------+
| table_catalog | table_schema       | table_name                | table_type | self_referencing_column_name | reference_generation | user_defined_type_catalog | user_defined_type_schema | user_defined_type_name | is_insertable_into | is_typed | commit_action |
+---------------+--------------------+---------------------------+------------+------------------------------+----------------------+---------------------------+--------------------------+------------------------+--------------------+----------+---------------+
| cubedb        | information_schema | tables                    | VIEW       |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | information_schema | columns                   | VIEW       |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | information_schema | pg_tables                 | VIEW       |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | public             | KibanaSampleDataEcommerce | BASE TABLE |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | public             | Logs                      | BASE TABLE |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | public             | NumberCube                | BASE TABLE |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | public             | WideCube                  | BASE TABLE |                              |                      |                           |                          |                        | NO                 | NO       |               |
| cubedb        | public             | MultiTypeCube             | BASE TABLE |                              |                      |                           |                          |                        | NO                 | NO       |               |
+---------------+--------------------+---------------------------+------------+------------------------------+----------------------+---------------------------+--------------------------+------------------------+--------------------+----------+---------------+
