rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__interval_div.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(query, DatabaseProtocol::PostgreSQL).await?"
---
+----+--------+-------------------------+
| id | unit   | i/1.5                   |
+----+--------+-------------------------+
| 0  | year   | 2020-09-01T00:00:00.000 |
| 1  | month  | 2020-01-21T00:00:00.000 |
| 2  | week   | 2020-01-05T16:00:00.000 |
| 3  | day    | 2020-01-01T16:00:00.000 |
| 4  | hour   | 2020-01-01T00:40:00.000 |
| 5  | minute | 2020-01-01T00:00:40.000 |
| 6  | second | 2020-01-01T00:00:00.666 |
+----+--------+-------------------------+
