rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__interval_mul.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(query, DatabaseProtocol::PostgreSQL).await?"
---
+----+--------+-------------------------+-------------------------+-------------------------+-------------------------+
| id | unit   | i*1                     | i*5                     | i*-10                   | i*1.5                   |
+----+--------+-------------------------+-------------------------+-------------------------+-------------------------+
| 0  | year   | 2021-01-01T00:00:00.000 | 2025-01-01T00:00:00.000 | 2010-01-01T00:00:00.000 | 2021-07-01T00:00:00.000 |
| 1  | month  | 2020-02-01T00:00:00.000 | 2020-06-01T00:00:00.000 | 2019-03-01T00:00:00.000 | 2020-02-16T00:00:00.000 |
| 2  | week   | 2020-01-08T00:00:00.000 | 2020-02-05T00:00:00.000 | 2019-10-23T00:00:00.000 | 2020-01-11T12:00:00.000 |
| 3  | day    | 2020-01-02T00:00:00.000 | 2020-01-06T00:00:00.000 | 2019-12-22T00:00:00.000 | 2020-01-02T12:00:00.000 |
| 4  | hour   | 2020-01-01T01:00:00.000 | 2020-01-01T05:00:00.000 | 2019-12-31T14:00:00.000 | 2020-01-01T01:30:00.000 |
| 5  | minute | 2020-01-01T00:01:00.000 | 2020-01-01T00:05:00.000 | 2019-12-31T23:50:00.000 | 2020-01-01T00:01:30.000 |
| 6  | second | 2020-01-01T00:00:01.000 | 2020-01-01T00:00:05.000 | 2019-12-31T23:59:50.000 | 2020-01-01T00:00:01.500 |
+----+--------+-------------------------+-------------------------+-------------------------+-------------------------+
